--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,12 @@
-{% include auto-ads.html %}
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- Your existing head content -->
+</head>
+<body>
+  <!-- Your existing body content -->
+
+  <!-- Include AdSense Auto Ads -->
+  {% include auto-ads.html %}
+</body>
+</html>
