Fix: Forced Font Awesome CDN link in custom head to resolve deep-page icon loading issue

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,3 +2,5 @@
      crossorigin="anonymous"></script>
 
 <meta name="google-adsense-account" content="ca-pub-3152588945184014">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.min.css">
